[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
rcgen = { version = "0.13.2", features = ["crypto", "x509-parser", "aws_lc_rs"] }
time = { version = "0.3.41", features = ["macros", "local-offset"] }
tokio-rustls = "0.26.2"
rustls = "0.23.27"
rustls-pki-types = "1.12.0"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.0"

[dependencies.tokio]
version = "1.45.1"
features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "time",
    "net",
    "macros"
]